--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,10 @@
 
               <p><strong>That's it! Do this and you'll never have an unproductive day again.</strong></p>
               <p>Along with the pomodoro technique, this has been the most effective productivity hack I've ever used.</p>
-              <p>We're making an app - 5Things - to help you focus ONLY on the most-important things that you need to do every day; </p> <p>so that at the end of the day, you'll have completed the most important tasks of the day, even if you don't have time to do anything else.</p>
+              <p></p>
+              <p>We're making an app - 5Things - to help you focus ONLY on the most-important things that you need to do every day; so that at the end of the day, you'll have completed the most important tasks of the day, even if you don't have time to do anything else.</p>
 
-              <p>We're currently making 5Things available to a small list of early adopters. If you'll like to get on that list, enter you email address below to get early access and start using 5Things to improve your productivity before everyone else.</p>
+              <p>We're making 5Things available to a small list of early adopters. If you'll like to be part of this list, enter you email address below to get early access and start using 5Things to improve your productivity before everyone else.</p>
 
               <div class="box">
                   <h4 class="themodal" > Enter your email address below: </h4>
