--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
               <p></p>
               <p>We're making an app - 5Things - to help you focus ONLY on the most-important things that you need to do every day; so that at the end of the day, you'll have completed the most important tasks of the day, even if you don't have time to do anything else.</p>
 
-              <p>We're making 5Things available to a small list of early adopters. If you'll like to be part of this list, enter you email address below to get early access and start using 5Things to improve your productivity before everyone else.</p>
+              <p>We're making 5Things available <strong>FREE</strong> to a small list of early adopters. If you'll like to be part of this list, enter you email address below to get early access and start using 5Things to improve your productivity.</p>
 
               <div class="box">
                   <h4 class="themodal" > Enter your email address below: </h4>
