--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
   <title>5 Things - Get things done on-time - a new kind of to-do list</title>
-
+  <meta name="google-site-verification" content="pg3GqdzQZrw56zL0E_Wxf999e1pHU2rqTFJSdRUvCBI" />
   
   <link rel="stylesheet" href="css/foundation.css" />
   <link rel="stylesheet" href="css/custom.css" />
