--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
           <div class="new-body" >
             <div class="hero" ><h1> Get Things Done on time... Everyday!</h1>
-               <p>5things helps you and get things done by limiting your to-do list to 5 items daily, forcing you to focus only on the most important things.
+               <p>5things helps you get the "important" things done by limiting your to-do list to 5 items daily, forcing you to focus only on the most important tasks.
                 </p>
 
 
